Support Java 8 and Java 9+ JVMs.